--- a/.github/workflows/update-day-counter.yml
+++ b/.github/workflows/update-day-counter.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Update day counter
         uses: yoichiro/gh-action-increment-value@v5
         with:
-          target_file: 'build_number.json'
+          target_file: 'index.md'
           prefix: '**['
           suffix: ' days]'
           commit_message: 'Increment the days counter to '
